<?xml version="1.0" encoding="utf-8"?>

<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context="com.example.benchmarkaudio.SelectAudio"
    tools:orientation="vertical">

<RadioGroup
    android:layout_width="match_parent"
    android:layout_height="match_parent">

    <RadioButton
        android:id="@+id/radio1"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@android:dimen/notification_large_icon_height"
        android:checked="false"
        android:onClick="onRadioButtonClicked"
        android:text="@string/radio1"
        android:textSize="18sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

        <RadioButton
            android:id="@+id/radio2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="16dp"
            android:text="@string/radio2"
            android:textSize="18sp"
            android:onClick="onRadioButtonClicked"
            app:layout_constraintTop_toBottomOf="@+id/radio1"
            tools:layout_editor_absoluteX="4dp"
            tools:ignore="MissingConstraints"/>

    <RadioButton
        android:id="@+id/radio3"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:text="@string/radio3"
        android:textSize="18sp"
        android:onClick="onRadioButtonClicked"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/radio2" />
        </RadioGroup>
</android.support.constraint.ConstraintLayout>

